# SpeakToGemini

./: .gitignore  pyproject.toml
src/: audio_text.py  gemini_client.py  main.py
